--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="popup.css">
-    <script type="module" src="popup.js"></script>
+    <script src="popup.js" defer></script>
 </head>
 <body>
-    <strong>Hello World!</strong>
+    <div class="content">
+        <label for="hideHomePage">Hide Home Page</label>
+        <input type="checkbox" name="hideHomePage" id="hideHomePage">
+    </div>
 </body>
 </html>
