improve hiding elements

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -6,9 +6,14 @@
     <script src="popup.js" defer></script>
 </head>
 <body>
-    <div class="content">
-        <label for="hideHomePage">Hide Home Page</label>
-        <input type="checkbox" name="hideHomePage" id="hideHomePage">
-    </div>
+    <p id="err"></p>
+    <table class="content">
+        <tbody>
+            <tr>
+                <td><label for="hideHomeTab">Hide <strong>Home</strong> Tab</label></td>
+                <td><input type="checkbox" name="hideHomeTab" id="hideHomeTab"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
