- improve file structure - add selection of elements to hide in the popup - save data to extension storage

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="popup.css">
+    <script src="js/style-storage.js"></script>
     <script src="popup.js" defer></script>
 </head>
 <body>
@@ -12,6 +13,22 @@
             <tr>
                 <td><label for="hideHomeTab">Hide <strong>Home</strong> Tab</label></td>
                 <td><input type="checkbox" name="hideHomeTab" id="hideHomeTab"></td>
+            </tr>
+            <tr>
+                <td><label for="hideShortsTab">Hide <strong>Shorts</strong> Tab</label></td>
+                <td><input type="checkbox" name="hideShortsTab" id="hideShortsTab"></td>
+            </tr>
+            <tr>
+                <td><label for="hideSubscriptionsTab">Hide <strong>Subscriptions</strong> Tab</label></td>
+                <td><input type="checkbox" name="hideSubscriptionsTab" id="hideSubscriptionsTab"></td>
+            </tr>
+            <tr>
+                <td><label for="hideYouTubeMusicTab">Hide <strong>YouTube Music</strong> Tab</label></td>
+                <td><input type="checkbox" name="hideYouTubeMusicTab" id="hideYouTubeMusicTab"></td>
+            </tr>
+            <tr>
+                <td><label for="hideYouTab">Hide <strong>You</strong> Tab</label></td>
+                <td><input type="checkbox" name="hideYouTab" id="hideYouTab"></td>
             </tr>
         </tbody>
     </table>
