add redirect to subscriptions toggle

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -11,6 +11,9 @@
     <table class="content">
         <tbody>
             <tr>
+                <td><h3>Tab Visibility</h3></td>
+            </tr>
+            <tr>
                 <td><label for="hideHomeTab">Hide <strong>Home</strong> Tab</label></td>
                 <td><input type="checkbox" name="hideHomeTab" id="hideHomeTab"></td>
             </tr>
@@ -27,8 +30,15 @@
                 <td><input type="checkbox" name="hideYouTubeMusicTab" id="hideYouTubeMusicTab"></td>
             </tr>
             <tr>
-                <td><label for="hideYouTab">Hide <strong>You</strong> Tab</label></td>
+                <td><label for="hideYouTab">Hide <strong>You/Library</strong> Tab</label></td>
                 <td><input type="checkbox" name="hideYouTab" id="hideYouTab"></td>
+            </tr>
+            <tr>
+                <td><h3>Other</h3></td>
+            </tr>
+            <tr>
+                <td><label for="redirectSubscriptionsTab">Redirect <strong>Home</strong> to <strong>Subscriptions</strong> Tab</label></td>
+                <td><input type="checkbox" name="redirectSubscriptionsTab" id="redirectSubscriptionsTab"></td>
             </tr>
         </tbody>
     </table>
